Fixed header alignment

--- a/public/css/program-list-style.css
+++ b/public/css/program-list-style.css
@@ -56,6 +56,7 @@
     html {
         height: 100%;
     }
+
     /*-------------------------------*/
     /*     Header Styles        */
     /*-------------------------------*/
@@ -75,6 +76,7 @@
     
     header .container {
         display: flex;
+        margin: 0;
         align-items: center;
     }
     
